可以执行的native版本1 todo（完全native）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ reinforce {
 
     sdkPath = "/Users/kb_jay/Library/Android/sdk/build-tools/28.0.3"
 
-    secretKey = "1234"
+    secretKey = "12345678"
 
     jdkPath = "/private/var/folders/c6/m_jcqqv17s5_50fj49sdq4q80000gn/T/AppTranslocation/5C6025AF-5527-48D6-BADE-8E26A490D3AD/d/Android Studio.app/Contents/jre/jdk/Contents/Home"
 }
