移动签名文件到根目录

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ reinforce {
     /**
      * 签名文件
      */
-    signKeyStore = "/Users/kb_jay/Documents/kbjay.keystore"
+    signKeyStore = getRootProject().getRootDir().getAbsolutePath()+"/kbjay.keystore"
 
     signAlias = "kbjay"
 
